fixed default meme image

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Ajit-tiwari.github.io/Meme-genrator",
+  "homepage": "https://ajit-tiwari.github.io/Meme-genrator",
   "name": "meme_creater",
   "version": "0.1.0",
   "private": true,
